parser/tests/parser/complex/invalid/basic_2.mf2
.foo {:hello}
{{}}
=== spans ===
                    .foo {:hello}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^ 0:0-1:4
QuotedPattern                     ^^^^ 1:0-1:4
Pattern                                0:0-0:0
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..13)
  .foo {:hello}↵{{}}
  ^^^^^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..18,
    declarations: [],
    body: QuotedPattern {
        span: @14..18,
        pattern: Pattern {
            parts: [],
        },
    },
}